Terceira alteracao do develop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    hoje é sexta, dia do sexo a tres
+    hoje é sexta, dia do chocolate quente
 </body>
 </html>
